--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -6,5 +6,5 @@ db.password=Ohdude0505Bdhjl11721
 
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create-drop
 
